# Global_CO2_from_cement_production

./: .gitignore  README.md  dodo.py  setup.cfg
.datalad/: config
downloaded_data/v220516/: 1. Cement_emissions_data.csv  1. Cement_emissions_data.xlsx  2. UNFCCC, 2022 - main_data.csv  2. UNFCCC, 2022 - main_data.xlsx  3. CHN China_cement_data.xlsx  3. IND India_cement_data.xlsx  3. IRN Iran_cement_production.xlsx  3. THA Thailand_cement_data.xlsx  3. TUR turkey_cement_data.csv  3. USA cement production 1880-.xlsx  3. USA clinker production inc PR.xlsx  3. VNM Vietnam_cement_data.xlsx  4. cement_production_0_USGS1990.csv  4. cement_production_3_overwriteUSGS.csv  4. cement_production_4_extrap.csv  4. cement_production_5_overwrite.csv  5. combined_cement_data.xlsx  6. cement_emissions_method.csv
downloaded_data/v220915/: 3. CHN China_cement_data.xlsx  3. IDN Indonesia_cement_data.xlsx  3. IND India_cement_data.xlsx  3. IRN Iran_cement_production.xlsx  3. TUR turkey_cement_data.csv  3. VNM Vietnam_cement_data.xlsx  4. cement_production_1_CDIAC.csv  4. cement_production_2_CDIACredisaggSoviet.csv  4. cement_production_3_overwriteUSGS.csv  4. cement_production_5_overwrite.csv  4. cement_production_5_sources.csv
downloaded_data/v230428/: 1. Cement_emissions_data.csv  1. Cement_emissions_data.xlsx  2. UNFCCC, 2022 - extra.xlsx  2. UNFCCC, 2022 - main_data.csv  2. UNFCCC, 2022 - main_data.xlsx  (+7 more)
src/: NOTES.md  definitions.py  download_version.py  download_version_datalad.py  helper_functions.py  read_version.py  read_version_datalad.py  versions.py
(+31 files in other folders)
