[metadata]
name = Global_CO2_from_cement_production
version = 0.1
author = Johannes Gütschow
author_email = mail@johannes-guetschow.de
description = Robbie Andrew's CO2 emissions from cement production data in PRIMAP2
        format
long_description = file: README.md
long_description_content_type = text/md
url = https://github.com/JGuetschow/Global_CO2_from_cement_production
#project_urls =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache Software License 2.0
license_file = LICENSE

[options]
#packages =
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    primap2
    pycountry
    datalad
    pycountry

[options.extras_require]
dev =
    pip
    wheel
    primap2
    datalad
    black
    ipykernel
    jupyter
    pycountry


[options.package_data]
* =
    *.csv
    *.nc
